<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stadium2"
    tools:context=".ui.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_32"
        android:alpha="0.7"
        android:background="@drawable/background_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MotionLayoutInvalidSceneFileReference">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/homeTeamLogo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toTopOf="@id/homeTeam"
            app:layout_constraintEnd_toEndOf="@id/homeTeam"
            app:layout_constraintStart_toStartOf="@id/homeTeam"
            app:layout_constraintTop_toBottomOf="@id/matchDetails">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/awayTeamLogo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toTopOf="@id/awayTeam"
            app:layout_constraintEnd_toEndOf="@id/awayTeam"
            app:layout_constraintStart_toStartOf="@id/awayTeam"
            app:layout_constraintTop_toBottomOf="@id/matchDetails">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/primer"
            app:layout_constraintBottom_toTopOf="@id/matchDetails"
            app:layout_constraintEnd_toEndOf="@id/details"
            app:layout_constraintStart_toStartOf="@id/details"
            app:layout_constraintTop_toTopOf="@id/details">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/matchDetails"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_details"
            app:layout_constraintBottom_toTopOf="@id/dot"
            app:layout_constraintEnd_toEndOf="@id/details"
            app:layout_constraintStart_toStartOf="@id/details"
            app:layout_constraintTop_toBottomOf="@id/logo">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dot"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            app:layout_constraintEnd_toEndOf="@id/matchDetails"
            app:layout_constraintStart_toStartOf="@id/matchDetails"
            app:layout_constraintTop_toTopOf="@id/homeTeam">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resultHomeTeam"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/dot"
            app:layout_constraintStart_toStartOf="@id/matchDetails"
            app:layout_constraintTop_toTopOf="@id/homeTeam">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resultAwayTeam"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/matchDetails"
            app:layout_constraintStart_toEndOf="@id/dot"
            app:layout_constraintTop_toTopOf="@id/awayTeam">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeTeam"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/matchDetails"
            app:layout_constraintStart_toStartOf="@id/details"
            app:layout_constraintTop_toBottomOf="@id/homeTeamLogo">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayTeam"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/details"
            app:layout_constraintStart_toEndOf="@id/matchDetails"
            app:layout_constraintTop_toBottomOf="@id/awayTeamLogo">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_calendar_month_24"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="@id/dot"
            app:layout_constraintStart_toStartOf="@id/dot"
            app:layout_constraintTop_toBottomOf="@id/dot">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/next"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/margin_24"
            android:src="@drawable/baseline_arrow_circle_right_24"
            app:layout_constraintEnd_toEndOf="@id/details"
            app:layout_constraintTop_toBottomOf="@id/date">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/prev"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_24"
            android:src="@drawable/baseline_arrow_circle_left_24"
            app:layout_constraintStart_toStartOf="@id/details"
            app:layout_constraintTop_toBottomOf="@id/date">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/referee"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referee"
            app:layout_constraintEnd_toStartOf="@id/next"
            app:layout_constraintHorizontal_bias="0.293"
            app:layout_constraintStart_toEndOf="@id/prev"
            app:layout_constraintTop_toTopOf="@id/next">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ref"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/next"
            app:layout_constraintStart_toEndOf="@id/referee"
            app:layout_constraintTop_toTopOf="@id/referee">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/statistics"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_24"
            android:background="@drawable/background_score"
            android:backgroundTint="@color/backGroundStatistics"
            android:gravity="center|center_horizontal"
            android:text="@string/statistics"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/matchStatistics"
            app:layout_constraintEnd_toEndOf="@id/details"
            app:layout_constraintStart_toStartOf="@id/details"
            app:layout_constraintTop_toBottomOf="@id/ref">
        </com.google.android.material.textview.MaterialTextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/matchStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_statistics"
            android:backgroundTint="@color/backGroundStatistics"
            android:padding="@dimen/padding_8"
            app:layout_constraintBottom_toBottomOf="@id/details"
            app:layout_constraintEnd_toEndOf="@id/details"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/details"
            app:layout_constraintTop_toBottomOf="@id/statistics">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/goals"
                style="@style/text.statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Goals"
                app:layout_constraintBottom_toTopOf="@id/shots"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/matchStatistics">
            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/shots"
                style="@style/text.statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shots"
                app:layout_constraintBottom_toTopOf="@id/shotsOnGoal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goals">
            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/shotsOnGoal"
                style="@style/text.statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShotsOnGoal"
                app:layout_constraintBottom_toTopOf="@id/corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shots">
            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/corners"
                style="@style/text.statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CornerKicks"
                app:layout_constraintBottom_toTopOf="@id/kicks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shotsOnGoal">
            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/kicks"
                style="@style/text.statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freeKicks"
                app:layout_constraintBottom_toTopOf="@id/yellowCards"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/corners">
            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/yellowCards"
                style="@style/text.statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellowCards"
                app:layout_constraintBottom_toTopOf="@id/redCards"
                app:layout_constraintTop_toBottomOf="@id/kicks">
            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/redCards"
                style="@style/text.statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redCards"
                app:layout_constraintBottom_toBottomOf="@id/matchStatistics"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yellowCards">
            </com.google.android.material.textview.MaterialTextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeTeamGoals"
            style="@style/text.home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/statistics">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayTeamGoals"
            style="@style/text.away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/statistics">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeTeamShots"
            style="@style/text.home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/homeTeamGoals">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayTeamShots"
            style="@style/text.away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/awayTeamGoals">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeTeamShotsOnTarget"
            style="@style/text.home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/homeTeamShots">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayTeamShotsOnTarget"
            style="@style/text.away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/awayTeamShots">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeCorners"
            style="@style/text.home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/homeTeamShotsOnTarget">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayCorners"
            style="@style/text.away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/awayTeamShotsOnTarget">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeFreeKicks"
            style="@style/text.home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/homeCorners">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayFreeKicks"
            style="@style/text.away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/awayCorners">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeYellowCards"
            style="@style/text.home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/homeFreeKicks">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayYellowCards"
            style="@style/text.away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/awayFreeKicks">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeRedCards"
            style="@style/text.home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/homeYellowCards"
            tools:layout_editor_absoluteX="58dp">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/awayRedCards"
            style="@style/text.away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/awayYellowCards">
        </com.google.android.material.textview.MaterialTextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>